--- a/app/src/main/res/layout/fragment_receive_new_order.xml
+++ b/app/src/main/res/layout/fragment_receive_new_order.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    >
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -89,8 +91,8 @@
                     android:elevation="3dp"
                     app:hintEnabled="false">
 
-                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                        android:id="@+id/spinner_gold_type"
+                    <AutoCompleteTextView
+                        android:id="@+id/act_gold_type"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:focusable="false"
@@ -196,7 +198,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Type"
-                        android:inputType="number"
                         android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                         android:textColor="@color/primary_text"
                         android:textColorHint="@color/secondary_text" />
@@ -348,7 +349,7 @@
                             android:id="@+id/edt_one_estimated_underCount_Y"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:hint="Y"
                             android:textColorHint="@color/secondary_text"
                             android:textAppearance="@style/TextAppearance.ShweMi.Body2"
@@ -473,7 +474,7 @@
                             android:id="@+id/edt_gold_weight_Y"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:hint="Y"
                             android:textColorHint="@color/secondary_text"
                             android:textAppearance="@style/TextAppearance.ShweMi.Body2"
@@ -1530,33 +1531,40 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout9" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_print"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="32dp"
-                android:insetLeft="0dp"
-                android:insetTop="0dp"
-                android:insetRight="0dp"
-                android:insetBottom="0dp"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:text="ပရင့်ထုတ်"
-                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/print"
-                app:iconSize="15dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/view2" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_print"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
+            android:insetLeft="0dp"
+            android:insetTop="0dp"
+            android:insetRight="0dp"
+            android:insetBottom="0dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:text="ပရင့်ထုတ်"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:cornerRadius="10dp"
+            app:icon="@drawable/print"
+            app:iconSize="15dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view2" />
 
+        <include
+            android:id="@+id/include_rv_sample"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            layout="@layout/include_receive_new_order"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btn_print"
+
+            />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
