--- a/app/src/main/res/layout/item_sample_list.xml
+++ b/app/src/main/res/layout/item_sample_list.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="32dp"
-    android:layout_marginStart="32dp"
-    android:layout_marginEnd="32dp"
+    android:layout_margin="32dp"
     app:cardElevation="3dp"
     app:cardCornerRadius="10dp">
 
@@ -18,7 +16,7 @@
         android:layout_height="150dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/iv_sample_item" />
+        tools:srcCompat="@drawable/iv_sample_item" />
 
 
 </com.google.android.material.card.MaterialCardView>
