--- a/app/src/main/res/layout/dialog_akouk_sell_add_product.xml
+++ b/app/src/main/res/layout/dialog_akouk_sell_add_product.xml
@@ -61,7 +61,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_label_title">
 
         <com.google.android.material.textfield.MaterialAutoCompleteTextView
-            android:id="@+id/spinner_item_type"
+            android:id="@+id/act_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusable="false"
