--- a/app/src/main/res/layout/fragment_resell_stock_info_added_sell.xml
+++ b/app/src/main/res/layout/fragment_resell_stock_info_added_sell.xml
@@ -16,6 +16,7 @@
             android:layout_height="110dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="100dp"
+            android:scaleType="fitXY"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/scan_rectangle" />
