--- a/app/src/main/res/layout/fragment_resell_stock_info_added_sell.xml
+++ b/app/src/main/res/layout/fragment_resell_stock_info_added_sell.xml
@@ -109,7 +109,7 @@
                     android:orientation="horizontal">
 
                     <RadioButton
-                        android:id="@+id/radio_btn_old_stock"
+                        android:id="@+id/radio_btn_outside_stock"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -807,7 +807,7 @@
 
                         <TextView
                             android:id="@+id/tv_y"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="center_vertical"
                             android:paddingStart="30dp"
