text box disabled and minor bugs fixed

--- a/app/src/main/res/layout/fragment_receive_new_order.xml
+++ b/app/src/main/res/layout/fragment_receive_new_order.xml
@@ -131,6 +131,7 @@
                     app:boxCornerRadiusTopEnd="10dp"
                     app:boxCornerRadiusTopStart="10dp"
                     app:boxStrokeColor="@color/edit_text_color_2"
+                    android:enabled="false"
                     app:boxStrokeWidth="1dp"
                     app:errorEnabled="false"
                     app:hintEnabled="false">
@@ -520,6 +521,7 @@
                         app:boxCornerRadiusTopEnd="10dp"
                         app:boxCornerRadiusTopStart="10dp"
                         app:boxStrokeColor="@color/edit_text_color_2"
+                        android:enabled="false"
                         app:boxStrokeWidth="1dp"
                         app:errorEnabled="false"
                         app:hintEnabled="false">
@@ -549,6 +551,7 @@
                         app:boxCornerRadiusTopStart="10dp"
                         app:boxStrokeColor="@color/edit_text_color_2"
                         app:boxStrokeWidth="1dp"
+                        android:enabled="false"
                         app:errorEnabled="false"
                         app:hintEnabled="false">
 
@@ -575,6 +578,7 @@
                         app:boxCornerRadiusTopEnd="10dp"
                         app:boxCornerRadiusTopStart="10dp"
                         app:boxStrokeColor="@color/edit_text_color_2"
+                        android:enabled="false"
                         app:boxStrokeWidth="1dp"
                         app:errorEnabled="false"
                         app:hintEnabled="false">
@@ -627,6 +631,7 @@
                         app:boxCornerRadiusTopEnd="10dp"
                         app:boxCornerRadiusTopStart="10dp"
                         app:boxStrokeColor="@color/edit_text_color_2"
+                        android:enabled="false"
                         app:boxStrokeWidth="1dp"
                         app:errorEnabled="false"
                         app:hintEnabled="false">
@@ -655,6 +660,7 @@
                         app:boxCornerRadiusTopEnd="10dp"
                         app:boxCornerRadiusTopStart="10dp"
                         app:boxStrokeColor="@color/edit_text_color_2"
+                        android:enabled="false"
                         app:boxStrokeWidth="1dp"
                         app:errorEnabled="false"
                         app:hintEnabled="false">
@@ -683,6 +689,7 @@
                         app:boxCornerRadiusTopStart="10dp"
                         app:boxStrokeColor="@color/edit_text_color_2"
                         app:boxStrokeWidth="1dp"
+                        android:enabled="false"
                         app:errorEnabled="false"
                         app:hintEnabled="false">
 
@@ -750,6 +757,7 @@
                         app:boxCornerRadiusTopStart="10dp"
                         app:boxStrokeColor="@color/edit_text_color_2"
                         app:boxStrokeWidth="1dp"
+                        android:enabled="false"
                         app:errorEnabled="false"
                         app:hintEnabled="false">
 
@@ -778,6 +786,7 @@
                         app:boxCornerRadiusTopStart="10dp"
                         app:boxStrokeColor="@color/edit_text_color_2"
                         app:boxStrokeWidth="1dp"
+                        android:enabled="false"
                         app:errorEnabled="false"
                         app:hintEnabled="false">
 
@@ -805,6 +814,7 @@
                         app:boxCornerRadiusTopStart="10dp"
                         app:boxStrokeColor="@color/edit_text_color_2"
                         app:boxStrokeWidth="1dp"
+                        android:enabled="false"
                         app:errorEnabled="false"
                         app:hintEnabled="false">
 
@@ -874,6 +884,7 @@
                         app:boxCornerRadiusTopStart="10dp"
                         app:boxStrokeColor="@color/edit_text_color_2"
                         app:boxStrokeWidth="1dp"
+                        android:enabled="false"
                         app:errorEnabled="false"
                         app:hintEnabled="false">
 
@@ -902,6 +913,7 @@
                         app:boxCornerRadiusTopStart="10dp"
                         app:boxStrokeColor="@color/edit_text_color_2"
                         app:boxStrokeWidth="1dp"
+                        android:enabled="false"
                         app:errorEnabled="false"
                         app:hintEnabled="false">
 
@@ -929,6 +941,7 @@
                         app:boxCornerRadiusTopStart="10dp"
                         app:boxStrokeColor="@color/edit_text_color_2"
                         app:boxStrokeWidth="1dp"
+                        android:enabled="false"
                         app:errorEnabled="false"
                         app:hintEnabled="false">
 
@@ -998,6 +1011,7 @@
                         app:boxCornerRadiusTopStart="10dp"
                         app:boxStrokeColor="@color/edit_text_color_2"
                         app:boxStrokeWidth="1dp"
+                        android:enabled="false"
                         app:errorEnabled="false"
                         app:hintEnabled="false">
 
@@ -1041,6 +1055,8 @@
                         app:boxCornerRadiusTopStart="10dp"
                         app:boxStrokeColor="@color/edit_text_color_2"
                         app:boxStrokeWidth="1dp"
+                        android:enabled="false"
+
                         app:errorEnabled="false"
                         app:hintEnabled="false">
 
@@ -1094,6 +1110,7 @@
                         android:orientation="horizontal">
 
                         <RadioButton
+                            android:id="@+id/radio_btn_with_value"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -1103,6 +1120,7 @@
                             android:textColor="@color/primary_text" />
 
                         <RadioButton
+                            android:id="@+id/radio_btn_with_kpy"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -1243,6 +1261,7 @@
                         app:boxCornerRadiusTopStart="10dp"
                         app:boxStrokeColor="@color/edit_text_color_2"
                         app:boxStrokeWidth="1dp"
+                        android:enabled="false"
                         app:errorEnabled="false"
                         app:hintEnabled="false">
 
@@ -1370,6 +1389,7 @@
                     app:boxCornerRadiusTopStart="10dp"
                     app:boxStrokeColor="@color/edit_text_color_2"
                     app:boxStrokeWidth="1dp"
+                    android:enabled="false"
                     app:errorEnabled="false"
                     app:hintEnabled="false">
 
