--- a/app/src/main/res/layout/fragment_pay_balance.xml
+++ b/app/src/main/res/layout/fragment_pay_balance.xml
@@ -51,7 +51,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Type or Scan"
-                    android:inputType="number"
+                    android:inputType="text"
                     android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                     android:textColor="@color/primary_text"
                     android:textColorHint="@color/secondary_text" />
