--- a/app/src/main/res/layout/fragment_pawn_interest.xml
+++ b/app/src/main/res/layout/fragment_pawn_interest.xml
@@ -22,12 +22,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toBottomOf="@+id/tv_tier">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -105,6 +105,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:enabled="false"
                         app:boxCornerRadiusBottomEnd="10dp"
                         app:boxCornerRadiusBottomStart="10dp"
                         app:boxCornerRadiusTopEnd="10dp"
@@ -171,6 +172,7 @@
                         app:boxStrokeColor="@color/edit_text_color_2"
                         app:boxStrokeWidth="1dp"
                         app:errorEnabled="false"
+                        android:enabled="false"
                         app:hintEnabled="false">
 
                         <com.google.android.material.textfield.TextInputEditText
@@ -216,6 +218,7 @@
                         app:boxStrokeColor="@color/edit_text_color_2"
                         app:boxStrokeWidth="1dp"
                         app:errorEnabled="false"
+                        android:enabled="false"
                         app:hintEnabled="false">
 
                         <com.google.android.material.textfield.TextInputEditText
@@ -284,7 +287,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:buttonTint="@color/primary"
-
+                    android:checked="true"
                     android:paddingStart="16dp"
                     android:text="အတိုးရှင်း"
                     android:textAppearance="@style/TextAppearance.ShweMi.Body2"
@@ -603,6 +606,39 @@
                     app:layout_constraintEnd_toEndOf="@+id/textInputLayout_charge" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/tv_label_tier"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:text="Scanned User Tier :"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/tv_tier"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                tools:text="Gold Tier"
+                android:textStyle="bold"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                app:layout_constraintStart_toEndOf="@id/tv_label_tier"
+                app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/tv_tier_discount_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                tools:text="10000"
+                android:textStyle="bold"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                app:layout_constraintStart_toEndOf="@id/tv_tier"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
