--- a/app/src/main/res/layout/fragment_start_sell.xml
+++ b/app/src/main/res/layout/fragment_start_sell.xml
@@ -10,9 +10,8 @@
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="120dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_label_qrCode"
         app:srcCompat="@drawable/scan_rectangle" />
 
     <ImageView
@@ -33,7 +32,8 @@
         android:text="QR ကုဒ်"
         android:textColor="@color/primary_text"
         android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/iv_scan"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="@+id/iv_scan" />
 
     <TextView
@@ -237,6 +237,8 @@
         android:text="အချက်အလက်"
         android:textColor="@color/primary_text"
         android:textSize="12sp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout_name"
         app:layout_constraintStart_toStartOf="@+id/textInputLayout_name" />
 
