--- a/app/src/main/res/layout/include_radio_select_investment.xml
+++ b/app/src/main/res/layout/include_radio_select_investment.xml
@@ -62,7 +62,7 @@
             android:id="@+id/edt_one"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number"
+            android:inputType="numberSigned"
             android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/primary_text" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -105,7 +105,7 @@
             android:id="@+id/edt_three"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number"
+            android:inputType="numberSigned"
             android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/primary_text" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -146,7 +146,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Type"
-            android:inputType="number"
+            android:inputType="numberSigned"
             android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/primary_text"
             android:textColorHint="@color/secondary_text" />
