--- a/app/src/main/res/layout/item_gold_from_home.xml
+++ b/app/src/main/res/layout/item_gold_from_home.xml
@@ -73,45 +73,47 @@
             android:gravity="center|start">
 
 
-            <ImageView
-                android:id="@+id/iv_delete_bg"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="16dp"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_delete"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="16dp"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:padding="0dp"
+                app:cornerRadius="20dp"
+                app:iconSize="20dp"
+                android:paddingStart="8dp"
+                app:icon="@drawable/delete"
+                app:iconTint="@color/white"
+                app:iconGravity="textStart"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/delete_edit_bg_circle" />
+                />
 
-            <ImageView
-                android:id="@+id/iv_delete"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                app:layout_constraintBottom_toBottomOf="@+id/iv_delete_bg"
-                app:layout_constraintEnd_toEndOf="@+id/iv_delete_bg"
-                app:layout_constraintStart_toStartOf="@+id/iv_delete_bg"
-                app:layout_constraintTop_toTopOf="@+id/iv_delete_bg"
-                app:srcCompat="@drawable/delete" />
-
-            <ImageView
-                android:id="@+id/iv_edit_bg"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginEnd="16dp"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_edit"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:insetLeft="0dp"
+                android:layout_marginEnd="8dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:padding="0dp"
+                android:paddingStart="8dp"
+                app:cornerRadius="20dp"
+                app:icon="@drawable/edit"
+                app:iconGravity="textStart"
+                app:iconSize="20dp"
+                app:iconTint="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/delete_edit_bg_circle" />
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/iv_edit"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                app:layout_constraintBottom_toBottomOf="@+id/iv_edit_bg"
-                app:layout_constraintEnd_toEndOf="@+id/iv_edit_bg"
-                app:layout_constraintStart_toStartOf="@+id/iv_edit_bg"
-                app:layout_constraintTop_toTopOf="@+id/iv_edit_bg"
-                app:srcCompat="@drawable/edit" />
             <CheckBox
                 android:id="@+id/cb_for_pawn"
                 android:layout_width="30dp"
@@ -121,7 +123,6 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:buttonTint="@color/primary"
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
