--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -194,6 +194,10 @@
             android:name="stockFromHomeList"
             app:argType="com.example.shwemisale.data_layers.domain.goldFromHome.StockFromHomeDomain[]"
             app:nullable="true" />
+        <argument
+            android:name="backPressType"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
 
     <fragment
