--- a/app/src/main/res/layout/fragment_pawn_interest.xml
+++ b/app/src/main/res/layout/fragment_pawn_interest.xml
@@ -465,7 +465,7 @@
                     app:iconSize="15dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout_claimMoney" />
+                    app:layout_constraintTop_toBottomOf="@+id/til_money_to_give" />
 
                 <TextView
                     android:id="@+id/tv_label_charge"
@@ -496,6 +496,7 @@
                     app:boxStrokeColor="@color/edit_text_color_2"
                     app:boxStrokeWidth="1dp"
                     app:errorEnabled="false"
+                    android:enabled="false"
                     app:hintEnabled="false"
                     app:layout_constraintStart_toEndOf="@+id/tv_label_charge"
                     app:layout_constraintTop_toTopOf="parent">
@@ -508,12 +509,11 @@
                         android:textAppearance="@style/TextAppearance.ShweMi.Body2"
                         android:textColor="@color/primary_text" />
                 </com.google.android.material.textfield.TextInputLayout>
-
                 <TextView
                     android:id="@+id/tv_label_claimMoney"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="64dp"
+                    android:layout_marginEnd="32dp"
                     android:layout_weight="1.3"
                     android:gravity="start|center"
                     android:text="တောင်းခံရန်ငွေ"
@@ -521,8 +521,24 @@
                     android:textColor="@color/primary"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_claimMoney"
-                    app:layout_constraintStart_toEndOf="@+id/textInputLayout_charge"
+                    app:layout_constraintEnd_toStartOf="@+id/textInputLayout_claimMoney"
                     app:layout_constraintTop_toTopOf="@+id/textInputLayout_claimMoney" />
+
+                <TextView
+                    android:id="@+id/tv_label_money_to_give"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="32dp"
+                    android:layout_weight="1.3"
+                    android:gravity="start|center"
+                    android:visibility="gone"
+                    android:text="ပေးရန်ငွေ"
+                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                    android:textColor="@color/primary"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@+id/til_money_to_give"
+                    app:layout_constraintEnd_toStartOf="@+id/til_money_to_give"
+                    app:layout_constraintTop_toTopOf="@+id/til_money_to_give" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/textInputLayout_claimMoney"
@@ -539,11 +555,40 @@
                     app:boxStrokeWidth="1dp"
                     app:errorEnabled="false"
                     app:hintEnabled="false"
+                    android:enabled="false"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/view">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/edt_claimMoney"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="number"
+                        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                        android:textColor="@color/primary_text" />
+                </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_money_to_give"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    android:layout_width="300dp"
+                    android:layout_height="45dp"
+                    android:visibility="gone"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="16dp"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:boxCornerRadiusTopStart="10dp"
+                    app:boxStrokeColor="@color/edit_text_color_2"
+                    app:boxStrokeWidth="1dp"
+                    app:errorEnabled="false"
+                    app:hintEnabled="false"
+                    android:enabled="false"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout_claimMoney">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edt_money_to_give"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number"
