--- a/app/src/main/res/layout/fragment_with_kpy.xml
+++ b/app/src/main/res/layout/fragment_with_kpy.xml
@@ -1224,7 +1224,24 @@
                         android:textColor="@color/primary_text" />
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
-
+            <TextView
+                android:id="@+id/tv_label_redeem_money"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                android:text="Redeemed Money - "
+                app:layout_constraintStart_toStartOf="@id/layout_redeem_manual"
+                app:layout_constraintTop_toBottomOf="@id/layout_redeem_manual"/>
+            <TextView
+                android:id="@+id/tv_redeem_money"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                tools:text="500"
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toEndOf="@+id/tv_label_redeem_money"
+                app:layout_constraintTop_toTopOf="@+id/tv_label_redeem_money"/>
 
             <LinearLayout
                 android:id="@+id/layout_point_redeem"
