--- a/app/src/main/res/layout/fragment_exchange_order.xml
+++ b/app/src/main/res/layout/fragment_exchange_order.xml
@@ -102,6 +102,7 @@
                 app:boxStrokeColor="@color/edit_text_color_2"
                 app:boxStrokeWidth="1dp"
                 app:errorEnabled="false"
+                android:enabled="false"
                 app:hintEnabled="false">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -147,6 +148,7 @@
                 app:boxStrokeColor="@color/edit_text_color_2"
                 app:boxStrokeWidth="1dp"
                 app:errorEnabled="false"
+                android:enabled="false"
                 app:hintEnabled="false">
 
                 <com.google.android.material.textfield.TextInputEditText
