print pawn in progress

--- a/app/src/main/res/layout/fragment_with_value.xml
+++ b/app/src/main/res/layout/fragment_with_value.xml
@@ -131,6 +131,7 @@
                 app:boxStrokeColor="@color/edit_text_color_2"
                 app:boxStrokeWidth="1dp"
                 app:errorEnabled="false"
+                android:enabled="false"
                 app:hintEnabled="false">
 
                 <com.google.android.material.textfield.TextInputEditText
