--- a/app/src/main/res/layout/dialog_ip_address.xml
+++ b/app/src/main/res/layout/dialog_ip_address.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_connect_to_printer"
+        android:id="@+id/btn_save_printer_ip"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="32dp"
@@ -14,7 +14,7 @@
         android:insetBottom="0dp"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        android:text="Connect"
+        android:text="Save"
         android:textAppearance="@style/TextAppearance.ShweMi.Body2"
         android:textColor="@color/white"
         android:textStyle="bold"
