--- a/app/src/main/res/layout/fragment_akouk_sell.xml
+++ b/app/src/main/res/layout/fragment_akouk_sell.xml
@@ -1,196 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+    <View
+        android:id="@+id/view2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/label_text"
+        app:layout_constraintBottom_toTopOf="@+id/include_payment"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rv_akouk_sell" />
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_add"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="16dp"
+        android:insetLeft="0dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
+        app:cornerRadius="10dp"
+        app:icon="@drawable/plus"
+        app:iconSize="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textInputLayout_gold_price" />
+
+    <TextView
+        android:id="@+id/tv_label_gold_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="ရွှေပေါက်စျေး"
+        android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+        android:textColor="@color/primary_text"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_gold_price"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textInputLayout_gold_price" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout_gold_price"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="300dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
+        app:boxStrokeColor="@color/edit_text_color_2"
+        app:boxStrokeWidth="1dp"
+        app:errorEnabled="false"
+        app:hintEnabled="false"
+        app:layout_constraintStart_toEndOf="@+id/tv_label_gold_price"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edt_gold_price"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+            android:textColor="@color/primary_text"
+            android:textStyle="bold" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-            <View
-                android:id="@+id/view2"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/label_text"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rv_akouk_sell" />
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@color/primary"
+        android:divider="@color/white"
+        android:orientation="horizontal"
+        android:showDividers="middle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_gold_price">
 
+        <TextView
+            android:id="@+id/tv_label_item_type"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="အထည်အမျိုးအစား"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_add"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginEnd="16dp"
-                android:insetLeft="0dp"
-                android:insetTop="0dp"
-                android:insetRight="0dp"
-                android:insetBottom="0dp"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/plus"
-                app:iconSize="15dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/textInputLayout_gold_price" />
+        <TextView
+            android:id="@+id/tv_label_gold_weight"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="ရွှေချိန်"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/tv_label_gold_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:text="ရွှေပေါက်စျေး"
-                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
-                android:textColor="@color/primary_text"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_gold_price"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/textInputLayout_gold_price" />
+        <TextView
+            android:id="@+id/tv_label_sell_reduce"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="ရောင်းရော့"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayout_gold_price"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:layout_width="300dp"
-                android:layout_height="45dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="16dp"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="10dp"
-                app:boxStrokeColor="@color/edit_text_color_2"
-                app:boxStrokeWidth="1dp"
-                app:errorEnabled="false"
-                app:hintEnabled="false"
-                app:layout_constraintStart_toEndOf="@+id/tv_label_gold_price"
-                app:layout_constraintTop_toTopOf="parent">
+        <TextView
+            android:id="@+id/tv_label_fee"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="လက်ခ"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edt_gold_price"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
-                    android:textColor="@color/primary_text"
-                    android:textStyle="bold" />
-            </com.google.android.material.textfield.TextInputLayout>
+        <TextView
+            android:id="@+id/tv_label_nan_htoe_fee"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="နန်းထိုးခ"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
-            <LinearLayout
-                android:id="@+id/linearLayout1"
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="16dp"
-                android:background="@color/primary"
-                android:divider="@color/white"
-                android:orientation="horizontal"
-                android:showDividers="middle"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_gold_price">
+        <TextView
+            android:id="@+id/tv_linear_label_charge"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="ကျသင့်ငွေ"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tv_label_item_type"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="အထည်အမျိုးအစား"
-                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
+        <TextView
+            android:id="@+id/tv_edit"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="ပြင်မည်"
+            android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tv_label_gold_weight"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="ရွှေချိန်"
-                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
+    </LinearLayout>
 
-                <TextView
-                    android:id="@+id/tv_label_sell_reduce"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="ရောင်းရော့"
-                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_akouk_sell"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toTopOf="@id/include_payment"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
+        tools:listitem="@layout/item_akouk_sell" />
 
-                <TextView
-                    android:id="@+id/tv_label_fee"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="လက်ခ"
-                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
+    <include
+        android:id="@+id/include_payment"
+        layout="@layout/include_akouk_sale_payment"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-                <TextView
-                    android:id="@+id/tv_label_nan_htoe_fee"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="နန်းထိုးခ"
-                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tv_linear_label_charge"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="ကျသင့်ငွေ"
-                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-                <TextView
-                    android:id="@+id/tv_edit"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="ပြင်မည်"
-                    android:textAppearance="@style/TextAppearance.ShweMi.Body2"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_akouk_sell"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@id/include_payment"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:orientation="vertical"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
-                tools:listitem="@layout/item_akouk_sell" />
-
-            <include
-                android:id="@+id/include_payment"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                layout="@layout/include_akouk_sale_payment"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
