--- a/app/src/main/res/layout/item_gem_weight.xml
+++ b/app/src/main/res/layout/item_gem_weight.xml
@@ -196,7 +196,7 @@
             android:layout_marginEnd="32dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="calculate"
+            android:text="တွက်မည်"
             android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textColor="@color/white"
             android:textColorHint="@color/secondary_text"
