--- a/app/src/main/res/layout/loading_dialog.xml
+++ b/app/src/main/res/layout/loading_dialog.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
+    <pl.droidsonroids.gif.GifImageView
         android:id="@+id/loading_bar"
         android:layout_width="48dp"
         android:layout_height="48dp"
