--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -107,7 +107,7 @@
         android:id="@+id/btn_edit_printer_ip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Edit IP Addres"
+        android:text="Edit IP Address"
         app:backgroundTint="@color/white"
         android:textColor="@color/primary"
         android:textAllCaps="false"
